# gog-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  missing_pieces.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  cli-reference.md  config-reference.md  gog-api-notes.md
src/gog_cli/: __init__.py  api.py  aria2c.py  auth.py  backup.py  cli.py  config.py  downloader.py  errors.py  execution.py  layout.py  listing.py  log.py  metadata.py  output.py  prompt.py  refresh.py  state.py  sync.py
src/gog_dl/: __init__.py  cli.py  state.py
tests/: test_api.py  test_aria2c.py  test_auth.py  test_backup.py  test_cli.py  test_config.py  test_downloader.py  test_errors.py  test_layout.py  test_output.py  test_prompt.py  test_refresh.py  test_state.py  test_sync.py
