[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gog-cli"
version = "0.1.0"
description = "CLI tool for backing up DRM-free GOG games."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "gog-cli contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
gog = "gog_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "SIM", "S", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
