[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gog-cli"
version = "0.3.0"
description = "CLI tool for backing up DRM-free GOG games."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "gog-cli contributors" }
]

dependencies = [
  "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/aleksandarristic/gog-cli"
Repository = "https://github.com/aleksandarristic/gog-cli"
"Bug Tracker" = "https://github.com/aleksandarristic/gog-cli/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "responses>=0.25",
  "ruff>=0.4",
]

[project.scripts]
gog = "gog_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "SIM", "S", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S107", "S108"]
